<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.NosotrosFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/nosDescimgHeader"
            android:layout_width="290dp"
            android:layout_height="199dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:contentDescription="@string/nosDescimgHeader"/>

        <TextView
            android:id="@+id/nosLblNosotrosTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nosLblNosotrosTitulo"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/nosLblTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nosLblTelefono"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/nosDescimg1"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:contentDescription="@string/nosDescimg1"
                android:src="@drawable/xx" />

            <ImageView
                android:id="@+id/nosDescimg2"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:contentDescription="@string/nosDescimg2"
                android:src="@drawable/bb" />
        </LinearLayout>


        <TextView
            android:id="@+id/nosLBLtxtInformacion"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:padding="16dp"
            android:text="@string/nosLBLtxtInformacion"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/nosLblEncuentranos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nosLblEncuentranos"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:fontFamily="@font/poppins_semibold"/>


        <ImageView
            android:id="@+id/img5"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/nosDescimg5"
            android:src="@drawable/mapa1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="horizontal">

            <fragment
                android:id="@+id/frgMenu"
                android:name="com.example.vetcare.fragmentos.MenuFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout="@layout/fragment_menu" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>