<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragmentos.PerfilUsuarioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perLblPerfilTitulo"
            android:textColor="@color/titulo"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="35sp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingVertical="15dp">


            <ImageButton
                android:id="@+id/perIconoUsuario"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:background="@color/fondoTransparente"
                android:contentDescription="@string/perDescIconoUsuario"
                android:src="@drawable/user" />

            <ImageButton
                android:id="@+id/perIconoEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:background="@color/fondoTransparente"
                android:contentDescription="@string/perDescIconoEditar"
                android:src="@drawable/editar" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/perTxtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/perTxtNombre"
                android:fontFamily="@font/poppins_medium"
                android:inputType="none"
                android:maxLength="100" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">
            <EditText
                android:id="@+id/perTxtApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/perTxtApellido"

                android:maxLength="100"
                android:fontFamily="@font/poppins_medium"
                android:inputType="none"
                android:autofillHints="nameFamily"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/perTxtTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/perTxtTelefono"
                android:maxLength="9"
                android:fontFamily="@font/poppins_medium"
                android:inputType="none"
                android:autofillHints="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/perTxtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/perTxtCorreo"

                android:maxLength="100"
                android:fontFamily="@font/poppins_medium"
                android:inputType="none"
                android:autofillHints="emailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perLblMisMascotas"
            android:textSize="25sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/titulo"

            android:layout_marginVertical="5dp"
            />
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="2"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:layout_marginEnd="16dp">

                <ImageView
                    android:id="@+id/btnInfoMascota"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:src="@drawable/perro1_95x70"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/perDescIconoMascota1"
                    android:background="@color/fondoTransparente"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/perNombMascota1"
                    android:fontFamily="@font/poppins_medium"
                    android:textAlignment="center" />
            </LinearLayout>

            <!-- Segunda imagen (centrada) -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"> <!-- Espaciado a los lados -->

                <ImageButton
                    android:id="@+id/btnInfoMascota2"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:src="@drawable/gato1_95x70"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/perDescIconoMascota2"
                    android:background="@color/fondoTransparente"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/perNombMascota2"
                    android:fontFamily="@font/poppins_medium"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >


                <ImageButton
                    android:id="@+id/btnAgregarMascota"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:src="@drawable/plus_mascota"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/perDescIconoAgregar"
                    android:background="@color/fondoTransparente"/>

            </LinearLayout>
        </GridLayout>

    </LinearLayout>

</FrameLayout>