<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragmentos.MisCitasFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/citLblReservarT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/citLblMisCitasTitulo"
            android:textSize="35sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/titulo"
            android:layout_marginTop="10dp"/>
        <CalendarView
            android:id="@+id/calendReserva"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/citLblfechaCita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/citLblFechaCita"
            android:textSize="15sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/citLblDetalleCita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/citLblDetalleCita"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_semibold"
            android:textAlignment="center"
            android:padding="15dp"
            tools:ignore="TextSizeCheck"
            android:background="@color/fondoMisCitas"/>

        <TextView
            android:id="@+id/citLblProximaCita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/citLblProximaCita"
            android:textColor="@color/titulo"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/citLblFechaProximaCita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/citLblFechaProximaCita"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_semibold"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/citLblDetalleProximaCita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/citLblDetalleProximaCita"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_semibold"
            android:padding="15dp"
            android:textAlignment="center"
            android:background="@color/fondoMisCitas"
            tools:ignore="TextSizeCheck" />

    </LinearLayout>

</FrameLayout>