<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.OlvidasteContrasenaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/olvLblOlvidasteContrasenaTitulo"
            android:textSize="35sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/titulo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/olvLblOlvidasteContrasenaInstrucciones"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_medium"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/olvTxtOlvidasteContrasenaCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/olvTxtOlvidasteContrasenaCorreo"
                android:fontFamily="@font/poppins_medium"
                android:maxLength="100"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true">

                <Button
                    android:id="@+id/olvBtnOlvidasteContrasenaEnviar"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/olvBtnOlvidasteContrasenaEnviar"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/btnPrimario"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_marginVertical="50dp"
                    android:layout_marginHorizontal="80dp"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>